fix beer batch spacing

--- a/src/_includes/css/pages/beer/batches/short-stack.css
+++ b/src/_includes/css/pages/beer/batches/short-stack.css
@@ -23,7 +23,7 @@ body {
 }
 
 .batch-short-stack > header {
-  font-size: var(--step-1);
+  font-size: var(--size-1);
 }
 
 .batch-short-stack > footer {
